# solana-stablecoin-standard

./: .gitignore  .heartbeat  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  HEARTBEAT_LOG.md  LICENSE  NOTICE  PROGRESS.md  README.md  SECURITY.md  audit3d.js  devnet-program-ids.json  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: chaos-testing.yml  ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile  PROGRESS.md  README.md  docker-compose.yml
backend/src/: auth.rs  db.rs  error.rs  feature_flags.rs  flag_refresh.rs  indexer.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  state.rs  webhook.rs  webhook_dispatch.rs  webhook_retry_worker.rs
backend/src/indexer_schema/: mod.rs
backend/src/monitor/: alert_manager.rs  invariant_checker.rs  metric_collector.rs  mod.rs
backend/src/routes/: alerts.rs  analytics.rs  apikeys.rs  burn.rs  cdp.rs  chain_events.rs  circuit_breaker.rs  collateral_config.rs  compliance.rs  compliance_rules.rs  confidential.rs  cpi.rs  events.rs  health.rs  liquidations.rs  metrics.rs  mint.rs  mod.rs  onchain.rs  openapi.rs  reserves.rs  supply.rs  supply_verify.rs  travel_rule.rs  webhook_deliveries.rs  webhooks.rs  ws_events.rs  zk_credentials.rs
cli/: README.md  example.config.toml  package-lock.json  package.json  tsconfig.json
cli/src/: config.ts  index.ts  solana-helpers.ts
crates/sss-cpi/: Cargo.toml  README.md
crates/sss-cpi/src/: discriminators.rs  flags.rs  instructions.rs  lib.rs  pda.rs  version.rs
deploy/: devnet-latest.json
docs/: API-REFERENCE.md  API.md  ARCHITECTURE.md  AUDIT-BACKEND-SDK.md  AUDIT-DESIGN-DOCS.md  AUDIT3-D-RESULTS.md  AUDIT3C-FINDINGS.md  AUDIT3C-FIXES.md  AUDIT3C-SUMMARY.md  AUTHORITY-ROTATION.md  CDP.md  CHAOS-REPORT.md  CHAOS-TESTING.md  CIRCUIT-BREAKER-KEEPER.md  COMPLIANCE.md  CONTEXT.md  CROSS-CHAIN-BRIDGE.md  DAO-GOVERNANCE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DEVNET.md  DEVTEST-004-REPORT.md  ECONOMIC-ATTACK-ANALYSIS.md  EVENT-SCHEMA.md  FEATURE-FLAGS-RESEARCH.md  FORMAL-SPEC.md  FUZZING.md  GAPS-ANALYSIS-ANCHOR.md  GAPS-ANALYSIS-BACKEND.md  GAPS-ANALYSIS-DOCS.md  GAPS-ANALYSIS-SDK.md  GAPS-ANALYSIS-SECURITY.md  GENIUS-ACT-COMPLIANCE.md  GRADUATED-LIQUIDATION-BONUS.md  GUARDIAN-PAUSE.md  HOOK-MONITORING.md  INCIDENT-RESPONSE.md  INDEXER-GUIDE.md  INSURANCE-VAULT.md  INTEGRATION-TESTS.md  (+89 more)
examples/: mint-demo.ts
idl/: sss_token.json
monitoring/: grafana-dashboard.json
programs/: README.md
programs/cpi-caller/: Cargo.toml
programs/cpi-caller/src/: lib.rs
programs/sss-core/: README.md
programs/sss-token/: Cargo.toml
programs/sss-token/src/: error.rs  events.rs  fuzz_tests.rs  lib.rs  proofs.rs  state.rs
programs/sss-token/src/instructions/: accept_authority.rs  admin_timelock.rs  apc.rs  authority_rotation.rs  bad_debt_backstop.rs  blacklist.rs  bridge.rs  burn.rs  cdp_borrow_stable.rs  cdp_deposit_collateral.rs  cdp_liquidate.rs  cdp_liquidate_v2.rs  cdp_repay_stable.rs  circuit_breaker_keeper.rs  collateral_config.rs  cpi_burn.rs  cpi_mint.rs  dao_committee.rs  deposit_collateral.rs  feature_flags.rs  freeze.rs  guardian.rs  initialize.rs  insurance_vault.rs  interface_version.rs  legal_entity_registry.rs  liquidation_bonus.rs  market_maker.rs  mint.rs  mod.rs  multi_oracle.rs  oracle_config.rs  pause.rs  pbs.rs  pid_fee.rs  proof_of_reserves.rs  psm_amm_slippage.rs  psm_fee.rs  redeem.rs  redemption_guarantee.rs  (+18 more)
programs/sss-token/src/oracle/: custom.rs  mod.rs  pyth.rs  switchboard.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: audit-consistency-check.ts  check-deployment.ts  check-genius-compliance.ts  check-mica-compliance.ts  deploy-devnet.sh  deploy-localnet.sh  deploy-wizard.ts  devnet-cdp-lifecycle-test.ts  devnet-feature-flags-test.ts  devnet-lifecycle.ts  devnet-pbs-apc-smoke-test.ts  devtest-003-feature-flags.ts  devtest-004-cdp-lifecycle.ts  liquidity-stress-test.ts  proof-demo-devnet.ts  proof-demo.ts  seed-liquidity.ts  smoke-test-devnet.ts  start-test-validator.sh  transfer-upgrade-authority.ts
sdk/: CONTEXT.md  README.md  package-lock.json  package.json  vitest.anchor.config.ts  vitest.config.ts  vitest.integration.config.ts
sdk-python/: pyproject.toml
sdk-python/docs/: PYTHON-SDK.md
sdk-python/sss/: __init__.py  cli.py  client.py  exceptions.py  flags.py  models.py  pda.py
sdk-python/tests/: conftest.py  test_client.py
sdk/src/: AdminTimelockModule.test.ts  AdminTimelockModule.ts  AgentPaymentChannelModule.test.ts  AgentPaymentChannelModule.ts  BadDebtBackstopModule.test.ts  BadDebtBackstopModule.ts  BadDebtBackstopModuleSSS100.test.ts  CdpModule.test.ts  CdpModule.ts  CircuitBreakerModule.test.ts  CircuitBreakerModule.ts  CollateralConfigModule.test.ts  CollateralConfigModule.ts  (+47 more)
specs/: sss.cfg  sss.tla
tests/: authority_rotation.ts  bug-024-permanent-delegate-policy.ts  bug-035-036-transfer-hook-sanctions-zk-owner.ts  oracle_abstraction.ts  redemption_queue.ts  seed-liquidity.test.ts  sss-055-cpi-composability.ts  sss-103-integration.ts  sss-121-guardian-pause.ts  sss-122-upgrade-path.ts  sss-123-proof-of-reserves.ts  sss-124-reserve-composition.ts  sss-125-redemption-guarantee.ts  sss-127-travel-rule.ts  sss-128-sanctions-oracle.ts  sss-129-zk-credentials.ts  sss-130-pid-fees.ts  sss-131-graduated-liquidation.ts  sss-132-psm-amm-slippage.ts  sss-133-wallet-rate-limits.ts  sss-134-sss4-squads.ts  sss-135-bridge.ts  sss-135-squads-signer-enforcement.ts  sss-137-redemption-pools.ts  sss-138-market-maker-hooks.ts  sss-145-supply-cap-por-halt.ts  sss-147-trustless-hardening.ts  sss-150-upgrade-authority-guard.ts  sss-151-insurance-vault.ts  sss-152-circuit-breaker-keeper.ts  sss-153-multi-oracle-consensus.ts  sss-156-legal-entity-registry.ts  sss-audit2d-flag-interactions.ts  sss-bug-003-sanctions-wrl-fail-open.ts  sss-bug-008-por-halt.ts  sss-bug-016-stability-fee-double-count.ts  sss-bug-018-guardian-pause-override.ts  sss-bug-019-compliance-authority-timelock.ts  sss-bug-020-cdp-liquidate-v2-circuit-breaker.ts  sss-bug-022-blacklist-freeze.ts  (+3 more)
(+63 files in other folders)
