[workspace]
members = [
    "programs/sss-token",
    "programs/transfer-hook",
    "programs/cpi-caller",
    "backend",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "=0.32.0"
anchor-spl = { version = "=0.32.0", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "0.10"
spl-transfer-hook-interface = "0.10"
blake3 = "=1.7.0"
