[package]
name = "sss-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
hyper-rustls = { version = "0.27", features = ["webpki-tokio"] }
bs58 = "0.5"
solana-program = "=2.3.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
axum-extra = { version = "0.9", features = [] }
futures = "0.3"
tokio-tungstenite = "0.21"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
