[project]
name = "solana-stablecoin-standard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "websockets>=12",
  "click>=8",
  "solders>=0.21",
  "solana>=0.34",
]
[project.optional-dependencies]
analytics = ["pandas>=2.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-cov"]
[project.scripts]
sss-cli = "sss.cli:cli"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
