[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard — SSS-1 (Minimal) and SSS-2 (Compliant) presets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
pyth-sdk-solana = "0.10.6"
blake3 = { workspace = true }

[dev-dependencies]
proptest = "1"
