[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "SSS-2 transfer hook — blacklist enforcement on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
